add quarkus example